# slapos.core

./: .gitignore  CHANGES.rst  CHANGES.txt  COPYING  MANIFEST.in  README.md  README.rst  compute_node_definition.cfg.example  format.py  mypy.ini  pyproject.toml  setup.py  slapos-api.yaml  slapos-proxy.cfg.example  slapos.cfg.example
documentation/source/: conf.py  index.rst  slap.rst  slapos.format.rst  slapos.usage.rst
jQuery/: server.py  slapos.html
jQuery/static/js/: slapOs.js  test.js
jQuery/templates/: test-mobile.html
jQuery/vifib/: index.html
jquery.slapos/: README.md  grunt.js  package.json
jquery.slapos/src/: jquery.slapos.js
jquery.slapos/test/: jquery.slapos.html  jquery.slapos_test.js
jquery.urlJS/src/: jquery.urljs.js
jquery.urlJS/test/: jquery.urljs.html  jquery.urljs_test.js
master/product/SlapOS/: Permissions.py  SlapOSMachineAuthenticationPlugin.py  SlapOSShadowAuthenticationPlugin.py  __init__.py
master/product/Vifib/: __init__.py
master/tests/: __init__.py
slapos/: README.console.rst  README.format.md  README.format.rst  README.format.txt  README.grid.rst  README.manager.rst  README.restapi.txt  README.slap.rst  __init__.py  bang.py  bouture.py  certificate.py  client.py  format.py  slapos-proxy.cfg.example  slapos.cfg.example  slapy  util.py  version.py
slapos/cli/: bang.py  boot.py  bouture.py  cache.py  cache_binarysr.py  cache_pypi.py  cache_source.py  cache_url.py  collect.py  command.py  complete.py  compute_node_info.py  compute_node_list.py  compute_node_token.py  computer_info.py  computer_list.py  computer_token.py  config.py  configure_client.py  console.py  entry.py  format.py  info.py  list.py  proxy_show.py  proxy_start.py  prune.py  register.py  remove.py  request.py  slapgrid.py  supervisorctl.py  supervisord.py  supply.py
slapos/cli/coloredlogs/: __init__.py
slapos/cli/configure_local/: __init__.py
slapos/collect/: README.txt  __init__.py  db.py  entity.py  reporter.py  snapshot.py
slapos/collect/temperature/: __init__.py
slapos/grid/: SlapObject.py  __init__.py  distribution.py  exception.py  networkcache.py  slapgrid.py  svcbackend.py  utils.py  watchdog.py  zc.buildout-bootstrap.py
slapos/grid/promise/: __init__.py  generic.py  runpromises.py  wrapper.py
slapos/grid/templates/: buildout-tail.cfg.in
slapos/manager/: cpuset.py  devperm.py  nxdbom.py  portredir.py  prerm.py  ptp4l.py  whitelistfirewall.py
slapos/proxy/: Makefile  __init__.py  absolute_path_converter.py  base64_converter.py  db.py  db_version.py  hateoas.py  http_proxy.py  json_rpc.json  json_rpc.py  json_rpc_experimental.json  panel.py  schema.sql  slap_tool.py  views.py
slapos/proxy/static_panel/: panel.css  panel.html  panel.js
slapos/slap/: __init__.py  exception.py  exceptions.py  hateoas.py  slap.py  standalone.py  util.py
slapos/slap/interface/: __init__.py  slap.py
slapos/testing/: __init__.py  caucase.py  check_software.py  e2e.py  testcase.py  utils.py
slapos/tests/: __init__.py  cli.py  client.py  collect.py  configure_local.py  grid_utils.py  interface.py  promise.py  slap.py  slapformat.py  slapgrid.py  slapobject.py  slapproxy.py  standalone.py  test_check_software.py  test_cli.py  test_client.py  test_collect.py  test_configure_local.py  test_distribution.py  test_grid_utils.py  test_interface.py  test_object.py  test_promise.py  test_prune.py  test_register.py  test_slap.py  test_slapformat.py  test_slapgrid.py  test_slapgrid_slaptool.py  test_slapproxy.py  test_slapproxy_httpproxy.py  test_slapproxy_json_rpc.py  test_slapproxy_panel.py  test_standalone.py  test_testing.py  test_util.py  util.py
slapos/tests/data/: 2019-10-07.xml
slapos/tests/slapproxy/: __init__.py  database_dump_version_11.sql  database_dump_version_current.sql
slapos/tests/test_pyflakes/: __init__.py
slapos/tests/test_slapproxy/: README.md  __init__.py  database_dump_version_11.sql  database_dump_version_12.sql  database_dump_version_13.sql  database_dump_version_14.sql  database_dump_version_15.sql  database_dump_version_16.sql  database_dump_version_current.sql  generate_dump.sh  (+1 more)
vifib/: Makefile  doc_panels.md  inc_manifest_release.sh  index.html  jslintrc  package.json
vifib/js/: init.js  jqm.panel.js  jqm.panelcontainer.js  jquery.slapos.js  main.js  pages.desktop.js  pages.js  pages.mobile.js  pages.tablet.js  panels.js  render.js
vifib/src/: jquery.mobile.vifib.js
vifib/test/: jquery.mobile.vifib.html
(+8639 files in other folders)
